<resources>
    <string name="app_name">Animations</string>
    <string name="biathlon_target_animation">1. Biathlon Target Animation</string>
    <string name="flight_animation">2. Flight Animation</string>
    <string name="checkbox_loader_animation">3. Checkbox Loader Animation</string>
    <string name="progress_ring">4. Progress Ring</string>
    <string name="compose_pager">5. Compose Pager</string>
    <string name="compose_strikethru">6. Compose Strikethru Icon</string>
    <string name="compose_blur">7. Compose Glow</string>
</resources>
